Source/WebCore/rendering/style/StyleScrollSnapPoints.h
@@ -48,13 +48,13 @@ inline bool operator==(const ScrollSnapType& a, const ScrollSnapType& b)
 inline bool operator!=(const ScrollSnapType& a, const ScrollSnapType& b) { return !(a == b); }
 
 struct ScrollSnapAlign {
-    ScrollSnapAxisAlignType x { ScrollSnapAxisAlignType::None };
-    ScrollSnapAxisAlignType y { ScrollSnapAxisAlignType::None };
+    ScrollSnapAxisAlignType blockAlign { ScrollSnapAxisAlignType::None };
+    ScrollSnapAxisAlignType inlineAlign { ScrollSnapAxisAlignType::None };
 };
 
 inline bool operator==(const ScrollSnapAlign& a, const ScrollSnapAlign& b)
 {
-    return a.x == b.x && a.y == b.y;
+    return a.blockAlign == b.blockAlign && a.inlineAlign == b.inlineAlign;
 }
 
 inline bool operator!=(const ScrollSnapAlign& a, const ScrollSnapAlign& b) { return !(a == b); }
